<resources>
    <string name="app_name">家庭报警装置</string>
    <string name="title_home">主页</string>
    <string name="title_settings">设置</string>
    <string name="title_notifications">通知</string>
    <string name="user_image_description">用户头像图片</string>
    <string name="user_name">紧急联系人</string>
    <string name="user_phone">联系人电话</string>
    <string name="on_button">打开</string>
    <string name="off_button">关闭</string>
    <string name="set_date">设置日期</string>
    <string name="set_time">设置报警间隔</string>
    <string name="log_out">退出登录</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

</resources>
